--- a/khoa-fullstack/index.html
+++ b/khoa-fullstack/index.html
@@ -475,15 +475,15 @@
                 <h3>Khóa học</h3>
                 <h1>FullStack Vietnam.</h1>
                 <p class="lead">Các khóa học sắp khai giảng tại FullStack Developer.
-                    <br>
-                    <span style="color:cyan">Lớp giới hạn 20 học viên/lớp</span>
+                    <!-- <br> -->
+                    <!-- <span style="color:cyan">Lớp giới hạn 20 học viên/lớp</span> -->
                 </p>
             </div>
         </div>
         <div class="row contact-content">
             <div class="col tab-full animate-this">
-                <h2 style="color:yellow">Khai giảng khóa 1 lớp full-stack developer </h2>
-                <h3 style="color:cyan">Học phí: 2.000.000đ/khóa 2 tháng</h3>
+                <h2 style="color:yellow">Full-stack developer </h2>
+                <!-- <h3 style="color:cyan">Học phí: 2.000.000đ/khóa 2 tháng</h3> -->
                 <div class="cinfo">
                     <h6>Khai giảng thường xuyên</h6>
                     <p> – Hướng dẫn chuyên sâu về cutting HTML (sử dụng SASS, PUG, JSX, Gulp, Webpack…)
