--- a/fede-pro/index.html
+++ b/fede-pro/index.html
@@ -345,7 +345,7 @@
 
                         </p>
                         <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
-                        <a href="/dang-ky-khoa-hoc/" class="button video link-lightbox">
+                        <a href="/dang-ky-khoa-hoc/" class="button">
                             Đăng ký khóa học</i>
                         </a>
                     </div>
