Push-6-page-info

--- a/fede-pro/index.html
+++ b/fede-pro/index.html
@@ -87,11 +87,11 @@
                         <div id="logo">
 
                             <!--Logo that is shown on the banner-->
-                            <img src="images/logobt.png" id="banner-logo" alt="Landing Page" />
+                            <img src="images/logo-neta.png" id="banner-logo" alt="Neta" />
                             <!--End of Banner Logo-->
 
                             <!--The Logo that is shown on the sticky Navigation Bar-->
-                            <img src="images/logobt.png" id="navigation-logo" alt="Landing Page" />
+                            <img src="images/logo-neta.png" id="navigation-logo" alt="Neta" />
                             <!--End of Navigation Logo-->
 
                         </div>
@@ -102,7 +102,7 @@
                             <!--Social Icons in Header-->
                             <ul class="social-icons">
                                 <li>
-                                    <a target="_blank" title="Facebook" href="https://www.facebook.com/fullstackvietnam">
+                                    <a target="_blank" title="Facebook" href="https://www.facebook.com/pham.nguyen.bao.nguyen">
                                         <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                                     </a>
                                 </li>
@@ -163,7 +163,7 @@
                 <div class="col-38">
 
                     <div class="section-heading">
-                        <h1>CHÚNG TÔI LÀ FULLSTACK VIETNAM</h1>
+                        <h1>CHÚNG TÔI LÀ NETA VIETNAM</h1>
                         <h2>Đem đến cho bạn kỹ thuật thiết kế và kỹ thuật code cao nhất trong nghề</h2>
                     </div>
 
@@ -318,12 +318,12 @@
                         <hr>
 
                         <p class="text-right">
-                            <strong>FULLSTACK VIETNAM</strong><br>
+                            <strong>NETA VIETNAM</strong><br>
                             Trung tâm đào tạo IT chuyên nghiệp
                             <br>
-                            Mobile: (+84) 969689893<br>
-                            Email: admin@fullstackvietnam.com<br>
-                            Địa chỉ: 28 đường số 2 – CITY LAND – Phường 7 – Gò Vấp – HCM
+                            Điện Thoại: +84 888.911.880<br>
+                            Email: admin@neta.edu.vn<br>
+                            Trụ sở chính: 156 Nguyễn Văn Thủ - P. Đa Kao - Q.1 - Tp.HCM
                         </p>
                         <!-- End of Testimonial-->
 
@@ -371,7 +371,7 @@
         <footer id="landing-footer" class="clearfix">
             <div class="row clearfix">
 
-                <p id="copyright" class="text-center">Trung tâm đào tạo IT chuyên nghiệp - FullStack Vietnam</p>
+                <p id="copyright" class="text-center">Trung tâm đào tạo IT chuyên nghiệp - Neta Vietnam</p>
 
                 
                 <!--End of Social Icons in Footer-->
