--- a/web-developer/index.html
+++ b/web-developer/index.html
@@ -50,7 +50,7 @@
 </head>
 
 <body>
-    <a href="tel:+84969689893" class="sticky-call">
+    <a href="tel:+84888911880" class="sticky-call">
         <i class="ico ico-phone"></i>
     </a>
     <div class="perspective js-perspective">
@@ -65,8 +65,8 @@
                         </div>
                     </div>
                     <div class="top__right">
-                        <a href="tel:+84969689893" class="top__call btn btn--small">Call
-                            <span>: +84 9696 8989 3</span>
+                        <a href="tel:+84888.911.880" class="top__call btn btn--small">Call
+                            <span>: +84 888.911.880</span>
                         </a>
                         <a class="menu-trigger js-mobile-menu">
                             <span></span>
@@ -120,7 +120,7 @@
                                                 <div class="slider-home__item-bg" style="background-image: url('assets/img/bg-home-slider-osteocenter.jpg');"></div>
                                                 <div class="slider-home__body">
                                                     <div class="slider-home__body-wrapper">
-                                                        <div class="slider-home__subtitle main-subtitle main-subtitle--small main-subtitle--above text-uppercase">FullStack Vietnam</div>
+                                                        <div class="slider-home__subtitle main-subtitle main-subtitle--small main-subtitle--above text-uppercase">Neta Vietnam</div>
                                                         <div class="slider-home__title main-title main-title--large">Hãy là một IT Đam mê</div>
                                                         <div class="slider-home__counters counters-list counters-list--home">
                                                             <div class="counter js-counter-slider">
@@ -212,7 +212,7 @@
                                             viết một trang web theo bất cứ mong đợi nào.
 
                                         </h1>
-                                        <a href="https://fullstackvietnam.com/" class="cta__action btn">Về chúng tôi</a>
+                                        <a href="https://neta.edu.vn/" class="cta__action btn">Về chúng tôi</a>
                                     </div>
                                 </div>
                             </div>
@@ -360,7 +360,7 @@
                                     <div class="col-lg-8 col-lg-offset-2">
                                         <h3 class="cta__title main-title main-title--large">Khóa học Lập trình Web chuyên nghiệp
                                         </h3>
-                                        <a href="https://fullstackvietnam.com/dang-ky-khoa-hoc/" class="cta__action btn btn--white" data-overlay="overlay-form">Đăng ký khóa học</a>
+                                        <a href="/dang-ky-khoa-hoc/" class="cta__action btn btn--white" data-overlay="overlay-form">Đăng ký khóa học</a>
                                     </div>
                                 </div>
                             </div>
@@ -372,7 +372,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-lg-6">
                                     <h4 class="footer__title">
-                                        <strong>FULLSTACK VIETNAM</strong>
+                                        <strong>NETA VIETNAM</strong>
                                     </h4>
                                     <nav class="links">
                                         <ul class="links__list">
@@ -382,13 +382,13 @@
 
                                             </li>
                                             <li>
-                                                Mobile: (+84) 969689893
+                                                Mobile: (+84) 888.911.880
                                             </li>
                                             <li>
-                                                Email: admin@fullstackvietnam.com
+                                                Email: admin@neta.edu.vn
                                             </li>
                                             <li class="small">
-                                                28 đường số 2 – CITY LAND – Phường 7 – Gò Vấp – HCM
+                                                Trụ sở chính: 156 Nguyễn Văn Thủ - P. Đa Kao - Q.1 - Tp.HCM
                                             </li>
                                         </ul>
                                     </nav>
@@ -399,18 +399,14 @@
                                     <nav class="links">
                                         <ul class="links__list">
                                             <li class="links__item">
-                                                <a href="tel:+84969689893">+84 9696 8989 3</a>
+                                                <a href="tel:+84969689893">(+84) 888.911.880</a>
                                             </li>
-                                            <li class="links__item">
-                                                <a href="https://fullstackvietnam.com/cac-du-an-tieu-bieu/">Các dự án tiêu biểu</a>
-                                            </li>
-
                                         </ul>
                                     </nav>
                                 </div>
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="footer__socials socials">
-                                        <a href="https://www.facebook.com/fullstackvietnam" class="socials__item socials__item--fb" target="_blank" rel="nofollow">
+                                        <a href="https://www.facebook.com/pham.nguyen.bao.nguyen" class="socials__item socials__item--fb" target="_blank" rel="nofollow">
                                             <i class="ico ico-fb"></i>
                                         </a>
 
@@ -455,32 +451,17 @@
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="https://fullstackvietnam.com/khoa-hoc-frontend-master/">
-                                    Khóa học FrontEnd Master
-                                </a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="https://fullstackvietnam.com/khoa-hoc-fullstack-developer/">
-                                    Khóa học FullStack Developer
-                                </a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="https://fullstackvietnam.com/khoa-hoc-design-chuyen-nghiep/">
-                                    Khóa học Design chuyên nghiệp
-                                </a>
-                            </li>
-                            <li class="nav__item">
-                                <a href="https://fullstackvietnam.com/khoa-hoc/">
+                                <a href="/lich-khai-giang">
                                     Lịch khai giảng
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="https://fullstackvietnam.xyz/">
+                                <a href="https://netavietnam.com/">
                                     Diễn đàn hỗ trợ
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="https://fullstackvietnam.com/cam-nhan-hoc-vien/">
+                                <a href="/cam-nhan-hoc-vien">
                                     Học viên nói!
                                 </a>
                             </li>
