--- a/aio-wordpress/index.html
+++ b/aio-wordpress/index.html
@@ -12,20 +12,20 @@
     <meta name="twitter:creator" content="@AIO WordPress">
     <meta name="twitter:title" content="Khóa học AIO WordPress">
     <meta name="twitter:description" content="AIO WordPress sẽ giúp cho người không chuyên lẫn bán chuyên nghiệp vẫn có thể tự xây dựng nhanh chóng một website bán hàng hoặc web giới thiệu công cty vô cùng chuyên nghiệp trong thời gian ngắn nhất với đầy đủ các tính năng từ quản lý đơn hàng, thành viên, hệ thống email…">
-    <meta name="twitter:image:src" content="https://fullstackvietnam.com/aio-wordpress/assets/img/web.png">
+    <meta name="twitter:image:src" content="https://neta.edu.vn/aio-wordpress/assets/img/web.png">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://fullstackvietnam.com/index.html">
+    <meta property="og:url" content="https://neta.edu.vn/index.html">
     <meta property="og:title" content="Khóa học AIO WordPress">
-    <meta property="og:image" content="https://fullstackvietnam.com/aio-wordpress/assets/img/web.png">
+    <meta property="og:image" content="https://neta.edu.vn/aio-wordpress/assets/img/web.png">
     <meta property="og:description" content="AIO WordPress sẽ giúp cho người không chuyên lẫn bán chuyên nghiệp vẫn có thể tự xây dựng nhanh chóng một website bán hàng hoặc web giới thiệu công cty vô cùng chuyên nghiệp trong thời gian ngắn nhất với đầy đủ các tính năng từ quản lý đơn hàng, thành viên, hệ thống email…">
     <meta property="og:site_name" content="Khóa học AIO WordPress">
     <meta property="article:author" content="https://www.facebook.com/pham.nguyen.bao.nguyen">
     <meta property="article:publisher" content="https://www.facebook.com/pham.nguyen.bao.nguyen">
     <meta property="fb:pages" content="351251658392161">
-    <meta property="ia:markup_url" content="https://fullstackvietnam.com">
+    <meta property="ia:markup_url" content="https://neta.edu.vn">
     <meta itemprop="name" content="Khóa học AIO WordPress">
     <meta itemprop="description" content="AIO WordPress sẽ giúp cho người không chuyên lẫn bán chuyên nghiệp vẫn có thể tự xây dựng nhanh chóng một website bán hàng hoặc web giới thiệu công cty vô cùng chuyên nghiệp trong thời gian ngắn nhất với đầy đủ các tính năng từ quản lý đơn hàng, thành viên, hệ thống email…">
-    <meta itemprop="image" content="https://fullstackvietnam.com/aio-wordpress/assets/img/web.png">
+    <meta itemprop="image" content="https://neta.edu.vn/aio-wordpress/assets/img/web.png">
     <link rel="stylesheet" href="assets/css/main.min.css">
     <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
@@ -50,7 +50,7 @@
 </head>
 
 <body>
-    <a href="tel:+84969689893" class="sticky-call">
+    <a href="tel:+84888911880" class="sticky-call">
         <i class="ico ico-phone"></i>
     </a>
     <div class="perspective js-perspective">
@@ -60,13 +60,13 @@
                     <div class="top__left">
                         <div class="top__logo">
                             <a href="/">
-                                <img src="assets/img/logobt.png" alt="">
+                                <img src="assets/img/logo-neta.png" alt="">
                             </a>
                         </div>
                     </div>
                     <div class="top__right">
-                        <a href="tel:+84969689893" class="top__call btn btn--small">Call
-                            <span>: +84 9696 8989 3</span>
+                        <a href="tel:+84 888.911.880" class="top__call btn btn--small">Call
+                            <span>: +84 888.911.880</span>
                         </a>
                         <a class="menu-trigger js-mobile-menu">
                             <span></span>
@@ -127,8 +127,7 @@
                                                 <div class="slider-home__item-bg" style="background-image: url('assets/img/bg-home-slider-osteocenter.jpg');"></div>
                                                 <div class="slider-home__body">
                                                     <div class="slider-home__body-wrapper">
-                                                        <div class="slider-home__subtitle main-subtitle main-subtitle--small main-subtitle--above text-uppercase">FullStack
-                                                            Vietnam</div>
+                                                        <div class="slider-home__subtitle main-subtitle main-subtitle--small main-subtitle--above text-uppercase">NETA</div>
                                                         <div class="slider-home__title main-title main-title--large">Hãy
                                                             là một IT Đam mê</div>
                                                         <div class="slider-home__counters counters-list counters-list--home">
@@ -225,7 +224,7 @@
                                             nhưng đem lại hiệu quả tối đa
 
                                         </h1>
-                                        <a href="https://fullstackvietnam.com/" class="cta__action btn">Về chúng tôi</a>
+                                        <a href="https://neta.edu.vn/" class="cta__action btn">Về chúng tôi</a>
                                     </div>
                                 </div>
                             </div>
@@ -386,7 +385,7 @@
                                     <div class="col-lg-8 col-lg-offset-2">
                                         <h3 class="cta__title main-title main-title--large">Khóa học AIO WordPress
                                         </h3>
-                                        <a href="https://fullstackvietnam.com/dang-ky-khoa-hoc/" class="cta__action btn btn--white"
+                                        <a href="https://neta.edu.vn/dang-ky-khoa-hoc" class="cta__action btn btn--white"
                                             data-overlay="overlay-form">Đăng ký khóa học</a>
                                     </div>
                                 </div>
@@ -399,7 +398,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-lg-6">
                                     <h4 class="footer__title">
-                                        <strong>FULLSTACK VIETNAM</strong>
+                                        <strong>NETA</strong>
                                     </h4>
                                     <nav class="links">
                                         <ul class="links__list">
@@ -409,14 +408,13 @@
 
                                             </li>
                                             <li>
-                                                Mobile: (+84) 969689893
+                                                Mobile: +84 888 911 880
                                             </li>
                                             <li>
-                                                Email: admin@fullstackvietnam.com
+                                                Email: admin@neta.edu.vn
                                             </li>
                                             <li class="small">
-                                                28 đường số 2 – CITY LAND – Phường 7 – Gò Vấp – HCM
-                                            </li>
+                                                156 Nguyễn Văn Thủ - Phường Đa Kao - Quận 1 - HCM                                            </li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -426,10 +424,10 @@
                                     <nav class="links">
                                         <ul class="links__list">
                                             <li class="links__item">
-                                                <a href="tel:+84969689893">+84 9696 8989 3</a>
+                                                <a href="tel:+84888911880">+84 888 911 880</a>
                                             </li>
                                             <li class="links__item">
-                                                <a href="https://fullstackvietnam.com/cac-du-an-tieu-bieu/">Các dự án
+                                                <a href="https://neta.edu.vn/cac-du-an-tieu-bieu/">Các dự án
                                                     tiêu biểu</a>
                                             </li>
 
@@ -438,7 +436,7 @@
                                 </div>
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="footer__socials socials">
-                                        <a href="https://www.facebook.com/fullstackvietnam" class="socials__item socials__item--fb"
+                                        <a href="https://www.facebook.com/neta" class="socials__item socials__item--fb"
                                             target="_blank" rel="nofollow">
                                             <i class="ico ico-fb"></i>
                                         </a>
@@ -485,17 +483,17 @@
                             </li>
 
                             <li class="nav__item">
-                                <a href="/khoa-hoc/">
+                                <a href="https://neta.edu.vn/lich-khai-giang">
                                     Lịch khai giảng
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="https://fullstackvietnam.xyz/">
+                                <a href="https://netavietnam.com/">
                                     Diễn đàn hỗ trợ
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="/cam-nhan-hoc-vien/">
+                                <a href="https://neta.edu.vn/cam-nhan-hoc-vien">
                                     Học viên nói!
                                 </a>
                             </li>
