--- a/aio-wordpress/index.html
+++ b/aio-wordpress/index.html
@@ -20,7 +20,7 @@
     <meta property="og:description" content="AIO WordPress sẽ giúp cho người không chuyên lẫn bán chuyên nghiệp vẫn có thể tự xây dựng nhanh chóng một website bán hàng hoặc web giới thiệu công cty vô cùng chuyên nghiệp trong thời gian ngắn nhất với đầy đủ các tính năng từ quản lý đơn hàng, thành viên, hệ thống email…">
     <meta property="og:site_name" content="Khóa học AIO WordPress">
     <meta property="article:author" content="https://www.facebook.com/pham.nguyen.bao.nguyen">
-    <meta property="article:publisher" content="https://www.facebook.com/pham.nguyen.bao.nguyen">
+    <meta property="article:publisher" content="https://www.facebook.com/netavietnam">
     <meta property="fb:pages" content="351251658392161">
     <meta property="ia:markup_url" content="https://neta.edu.vn">
     <meta itemprop="name" content="Khóa học AIO WordPress">
@@ -133,8 +133,8 @@
                                                         <div class="slider-home__counters counters-list counters-list--home">
                                                             <div class="counter js-counter-slider">
                                                                 <div class="counter__count">+
-                                                                    <span data-value="2000000">0</span>đ</div>
-                                                                <div class="counter__title">Khóa học 1 tháng</div>
+                                                                    <span data-value="72">0</span>h</div>
+                                                                <div class="counter__title">Cho một website</div>
                                                             </div>
                                                             <div class="counter js-counter-slider">
                                                                 <div class="counter__count">+
@@ -152,7 +152,7 @@
                                                 <div class="slider-home__item-bg" style="background-image: url('assets/img/bg-home-slider-randkuj.jpg');"></div>
                                                 <div class="slider-home__body">
                                                     <div class="slider-home__body-wrapper">
-                                                        <div class="slider-home__subtitle main-subtitle main-subtitle--small main-subtitle--above text-uppercase">FullStack Vietnam</div>
+                                                        <div class="slider-home__subtitle main-subtitle main-subtitle--small main-subtitle--above text-uppercase">NETA Vietnam</div>
                                                         <div class="slider-home__title main-title main-title--large">Hãy là một IT Đam mê</div>
 
                                                         <div class="slider-home__counters counters-list counters-list--home">
@@ -177,7 +177,7 @@
                                                 <div class="slider-home__item-bg" style="background-image: url('assets/img/bg-home-slider-angelsounds.jpg');"></div>
                                                 <div class="slider-home__body">
                                                     <div class="slider-home__body-wrapper">
-                                                        <div class="slider-home__subtitle main-subtitle main-subtitle--small main-subtitle--above text-uppercase">FullStack Vietnam</div>
+                                                        <div class="slider-home__subtitle main-subtitle main-subtitle--small main-subtitle--above text-uppercase">NETA Vietnam</div>
                                                         <div class="slider-home__title main-title main-title--large">Hãy là một IT Đam mê</div>
 
                                                         <div class="slider-home__counters counters-list counters-list--home">
@@ -224,7 +224,7 @@
                                             nhưng đem lại hiệu quả tối đa
 
                                         </h1>
-                                        <a href="https://neta.edu.vn/" class="cta__action btn">Về chúng tôi</a>
+                                        <a href="/" class="cta__action btn">Về chúng tôi</a>
                                     </div>
                                 </div>
                             </div>
@@ -385,7 +385,7 @@
                                     <div class="col-lg-8 col-lg-offset-2">
                                         <h3 class="cta__title main-title main-title--large">Khóa học AIO WordPress
                                         </h3>
-                                        <a href="https://neta.edu.vn/dang-ky-khoa-hoc" class="cta__action btn btn--white"
+                                        <a href="/dang-ky-khoa-hoc" class="cta__action btn btn--white"
                                             data-overlay="overlay-form">Đăng ký khóa học</a>
                                     </div>
                                 </div>
@@ -413,8 +413,7 @@
                                             <li>
                                                 Email: admin@neta.edu.vn
                                             </li>
-                                            <li class="small">
-                                                156 Nguyễn Văn Thủ - Phường Đa Kao - Quận 1 - HCM                                            </li>
+                                            
                                         </ul>
                                     </nav>
                                 </div>
@@ -427,7 +426,7 @@
                                                 <a href="tel:+84888911880">+84 888 911 880</a>
                                             </li>
                                             <li class="links__item">
-                                                <a href="https://neta.edu.vn/cac-du-an-tieu-bieu/">Các dự án
+                                                <a href="/cac-du-an-tieu-bieu/">Các dự án
                                                     tiêu biểu</a>
                                             </li>
 
@@ -436,7 +435,7 @@
                                 </div>
                                 <div class="col-sm-6 col-lg-3">
                                     <div class="footer__socials socials">
-                                        <a href="https://www.facebook.com/neta" class="socials__item socials__item--fb"
+                                        <a href="https://www.facebook.com/netavietnam" class="socials__item socials__item--fb"
                                             target="_blank" rel="nofollow">
                                             <i class="ico ico-fb"></i>
                                         </a>
@@ -483,17 +482,17 @@
                             </li>
 
                             <li class="nav__item">
-                                <a href="https://neta.edu.vn/lich-khai-giang">
+                                <a href="/lich-khai-giang">
                                     Lịch khai giảng
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="https://netavietnam.com/">
+                                <a href="https://fullstackvietnam.xyz/">
                                     Diễn đàn hỗ trợ
                                 </a>
                             </li>
                             <li class="nav__item">
-                                <a href="https://neta.edu.vn/cam-nhan-hoc-vien">
+                                <a href="/cam-nhan-hoc-vien">
                                     Học viên nói!
                                 </a>
                             </li>
