--- a/fede-pro/index.html
+++ b/fede-pro/index.html
@@ -4,7 +4,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <!--Page Title-->
-    <title>Khóa học FEDE Pro - FullStack Vietnam</title>
+    <title>Khóa học FEDE Pro - NETA Vietnam</title>
     <meta name="description" content="FEDE Pro sẽ đem lại cho bạn có được những kỹ thuật thiết kế và kỹ thuật code cao nhất trong nghề, để không chỉ có thể thiết kế mọi thứ về đồ họa cực đẹp mà còn có thể xuất bản ra các trang web với đầy đủ hiệu ứng lẫn tương thích mọi thiết bị một cách chuyên nghiệp nhất.">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="twitter:card" content="Khóa học FEDE Pro">
@@ -12,20 +12,20 @@
     <meta name="twitter:creator" content="@FEDE Pro">
     <meta name="twitter:title" content="Khóa học FEDE Pro">
     <meta name="twitter:description" content="FEDE Pro sẽ đem lại cho bạn có được những kỹ thuật thiết kế và kỹ thuật code cao nhất trong nghề, để không chỉ có thể thiết kế mọi thứ về đồ họa cực đẹp mà còn có thể xuất bản ra các trang web với đầy đủ hiệu ứng lẫn tương thích mọi thiết bị một cách chuyên nghiệp nhất.">
-    <meta name="twitter:image:src" content="https://fullstackvietnam.com/fede-pro/images/fe.jpg">
+    <meta name="twitter:image:src" content="https://neta.edu.vn/fede-pro/images/fe.jpg">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://fullstackvietnam.com/index.html">
+    <meta property="og:url" content="https://neta.edu.vn/index.html">
     <meta property="og:title" content="Khóa học FEDE Pro">
-    <meta property="og:image" content="https://fullstackvietnam.com/fede-pro/images/fe.jpg">
+    <meta property="og:image" content="https://neta.edu.vn/fede-pro/images/fe.jpg">
     <meta property="og:description" content="FEDE Pro sẽ đem lại cho bạn có được những kỹ thuật thiết kế và kỹ thuật code cao nhất trong nghề, để không chỉ có thể thiết kế mọi thứ về đồ họa cực đẹp mà còn có thể xuất bản ra các trang web với đầy đủ hiệu ứng lẫn tương thích mọi thiết bị một cách chuyên nghiệp nhất.">
     <meta property="og:site_name" content="Khóa học FEDE Pro">
     <meta property="article:author" content="https://www.facebook.com/pham.nguyen.bao.nguyen">
-    <meta property="article:publisher" content="https://www.facebook.com/pham.nguyen.bao.nguyen">
+    <meta property="article:publisher" content="https://www.facebook.com/netavietnam">
     <meta property="fb:pages" content="351251658392161">
-    <meta property="ia:markup_url" content="https://fullstackvietnam.com">
+    <meta property="ia:markup_url" content="https://neta.edu.vn">
     <meta itemprop="name" content="Khóa học FEDE Pro">
     <meta itemprop="description" content="FEDE Pro sẽ đem lại cho bạn có được những kỹ thuật thiết kế và kỹ thuật code cao nhất trong nghề, để không chỉ có thể thiết kế mọi thứ về đồ họa cực đẹp mà còn có thể xuất bản ra các trang web với đầy đủ hiệu ứng lẫn tương thích mọi thiết bị một cách chuyên nghiệp nhất.">
-    <meta itemprop="image" content="https://fullstackvietnam.com/fede-pro/images/fe.jpg">
+    <meta itemprop="image" content="https://neta.edu.vn/fede-pro/images/fe.jpg">
     <link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
@@ -102,7 +102,7 @@
                             <!--Social Icons in Header-->
                             <ul class="social-icons">
                                 <li>
-                                    <a target="_blank" title="Facebook" href="https://www.facebook.com/pham.nguyen.bao.nguyen">
+                                    <a target="_blank" title="Facebook" href="https://www.facebook.com/netavietnam">
                                         <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
                                     </a>
                                 </li>
@@ -322,8 +322,7 @@
                             Trung tâm đào tạo IT chuyên nghiệp
                             <br>
                             Điện Thoại: +84 888.911.880<br>
-                            Email: admin@neta.edu.vn<br>
-                            Trụ sở chính: 156 Nguyễn Văn Thủ - P. Đa Kao - Q.1 - Tp.HCM
+                            Email: admin@neta.edu.vn
                         </p>
                         <!-- End of Testimonial-->
 
