--- a/khoa-dohoa/index.html
+++ b/khoa-dohoa/index.html
@@ -431,8 +431,8 @@ baonguyenyam.blogspot.com
                     <div class="clear"></div>
                 </div>
                 <div class="full-width">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3919.308041141488!2d106.69464781474906!3d10.787702492313873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1zMTU2IE5ndXnhu4VuIFbEg24gVGjhu6cgLSBQLiDEkGEgS2FvIC0gUS4xIC0gVHAuSENN!5e0!3m2!1sen!2s!4v1539681907337"
-                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.7830862917817!2d106.67903385089134!3d10.827905192248743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317529a051ecf4db%3A0x5a97da772085c509!2zVHJ1bmcgdMOibSDEkcOgbyB04bqhbyB0aGnhur90IGvhur8gY2h1ecOqbiBuZ2hp4buHcCB2w6AgbOG6rXAgdHLDrG5oIHZpw6puIGNodXnDqm4gbmdoaeG7h3AgRnVsbFN0YWNrIFZpZXRuYW0!5e0!3m2!1sen!2s!4v1543654687219" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
                 </div>
             </div>
             <div class="clear"></div>
@@ -441,9 +441,8 @@ baonguyenyam.blogspot.com
     <footer>
         <div class="footer content-1170 center-relative">
             <p>
-                <img src="./img/logo.png" alt="Khóa học design chuyên nghiệp">
+                <img src="./img/logo-vh.png" alt="Khóa học design chuyên nghiệp">
             </p>
-            <p class="mb-5">156 Nguyễn Văn Thủ - P. Đa Kao - Q.1 - Tp.HCM</p>
             <p class="mb-5 lead text-white">
                 <strong>+84 888.911.880
 					<br> <i>Hoặc:</i> +84 866.222.880
