--- a/khoa-frontend/index.html
+++ b/khoa-frontend/index.html
@@ -161,7 +161,7 @@ baonguyenyam.blogspot.com
                     <div class="row">
                         <div class="col-lg-10 mx-auto">
                             <h1 class="text-uppercase text-center">
-                                <img src="./img/neta-logo-1.png" alt="" style="width:auto;max-width:100%; margin:0 auto">
+                                <img src="./img/logo-vh.png" alt="" style="width:auto;max-width:100%; margin:0 auto">
                                 <span>Hãy là một IT đam mê</span>
                             </h1>
                             <hr>
@@ -417,9 +417,8 @@ baonguyenyam.blogspot.com
             <div class="row">
                 <div class="col-lg-12 ml-auto text-center">
                     <p class="mb-5">
-                        <img src="./img/logob.png" alt="">
+                        <img src="./img/logo-v.png" width="100" alt="">
                     </p>
-                    <p class="mb-0">156 Nguyễn Văn Thủ - P. Đa Kao - Q.1 - Tp.HCM</p>
                     <p class="lead">
                         <strong>0888.911.880</strong>
 
