--- a/khoa-fullstack/index.html
+++ b/khoa-fullstack/index.html
@@ -21,19 +21,19 @@
     <meta name="ICBM" content="10.827831,106.681231">
     <!-- SEO-->
     <meta name="author" content="Neta Vietnam">
-    <link rel="canonical" href="https://fullstackvietnam.com/full-stack/">
+    <link rel="canonical" href="https://neta.edu.vn/full-stack/">
     <!-- Social: Twitter-->
     <meta name="twitter:card" content="Khóa học - Neta Vietnam">
     <meta name="twitter:site" content="baonguyenyam.github.io/cv">
     <meta name="twitter:creator" content="@Bao Nguyen">
     <meta name="twitter:title" content="Khóa học - Neta Vietnam">
     <meta name="twitter:description" content="Full Stack Developer là những lập trình viên có đầy đủ các kĩ năng tổng hợp bao gồm Server, Network, Data Modeling, Logic nghiệp vụ, API, Restful, User Interface (Web + App) & phải hiểu rõ tâm lý khách hàng & mong muốn của họ. Để trở thành một Full Stack Developer, đòi hỏi người học phải phát triển đầy đủ các kĩ năng, cũng như rèn luyện ở các project thực tế trên thị trường. Neta Vietnam cung cấp các khóa học đáp ứng cho bạn những nhu cầu thực tiễn với những công nghệ mới nhất.">
-    <meta name="twitter:image:src" content="https://fullstackvietnam.com/full-stack/img/hero-bg.jpg">
+    <meta name="twitter:image:src" content="https://neta.edu.vn/full-stack/img/hero-bg.jpg">
     <!-- Social: Facebook / Open Graph-->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://fullstackvietnam.com/full-stack/">
+    <meta property="og:url" content="https://neta.edu.vn/full-stack/">
     <meta property="og:title" content="Khóa học - Neta Vietnam">
-    <meta property="og:image" content="https://fullstackvietnam.com/full-stack/img/hero-bg.jpg">
+    <meta property="og:image" content="https://neta.edu.vn/full-stack/img/hero-bg.jpg">
     <meta property="og:description" content="Full Stack Developer là những lập trình viên có đầy đủ các kĩ năng tổng hợp bao gồm Server, Network, Data Modeling, Logic nghiệp vụ, API, Restful, User Interface (Web + App) & phải hiểu rõ tâm lý khách hàng & mong muốn của họ. Để trở thành một Full Stack Developer, đòi hỏi người học phải phát triển đầy đủ các kĩ năng, cũng như rèn luyện ở các project thực tế trên thị trường. Neta Vietnam cung cấp các khóa học đáp ứng cho bạn những nhu cầu thực tiễn với những công nghệ mới nhất.">
     <meta property="og:site_name" content="Neta Vietnam">
     <meta property="article:author" content="//www.facebook.com/pham.nguyen.bao.nguyen">
@@ -43,7 +43,7 @@
     <link rel="publisher" href="//plus.google.com/+baonguyenyam/">
     <meta itemprop="name" content="Khóa học - Neta Vietnam">
     <meta itemprop="description" content="Full Stack Developer là những lập trình viên có đầy đủ các kĩ năng tổng hợp bao gồm Server, Network, Data Modeling, Logic nghiệp vụ, API, Restful, User Interface (Web + App) & phải hiểu rõ tâm lý khách hàng & mong muốn của họ. Để trở thành một Full Stack Developer, đòi hỏi người học phải phát triển đầy đủ các kĩ năng, cũng như rèn luyện ở các project thực tế trên thị trường. Neta Vietnam cung cấp các khóa học đáp ứng cho bạn những nhu cầu thực tiễn với những công nghệ mới nhất.">
-    <meta itemprop="image" content="https://fullstackvietnam.com/full-stack/img/hero-bg.jpg">
+    <meta itemprop="image" content="https://neta.edu.vn/full-stack/img/hero-bg.jpg">
     <!-- Meta Tag Search-->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="Khóa học - Neta Vietnam">
@@ -122,7 +122,7 @@
                     </a>
                 </li>
                 <li class="animate-intro">
-                    <a href="https://fullstackvietnam.com/">
+                    <a href="https://neta.edu.vn/">
                         <i class="fa fa-link"></i>
                     </a>
                 </li>
@@ -159,7 +159,7 @@
                 </a>
             </li>
             <li class="animate-intro">
-                <a href="https://fullstackvietnam.com/">
+                <a href="https://neta.edu.vn/">
                     <i class="fa fa-link"></i>
                 </a>
             </li>
@@ -497,7 +497,7 @@
                 <div class="cinfo">
                     <h6>Xem chi tiết</h6>
                     <p>
-                        <a href="/khoa-hoc-fullstack-developer/">Xem chi tiết</a>
+                        <a href="/khoa-hoc-fullstack-nodejs/">Xem chi tiết</a>
                     </p>
                 </div>
             </div>
@@ -511,8 +511,6 @@
                 <div class="col-five tab-full footer-about">
                     <h4 class="h05">Thông tin liên hệ.</h4>
                     <p style="color:yellow">Điện Thoại: +84 888.911.880 <br>
-                      <i>Hoặc:</i>  +84 866.222.880
-                        <br>
                         <a href="mailto:admin@neta.edu.vn">admin@neta.edu.vn</a>
                     </p>
                     <p>
@@ -525,7 +523,7 @@
                 </div>
                 <div class="col-seven tab-full footer-subscribe end">
                     <h4 class="h05">Map.</h4>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3919.3079724587737!2d106.69464781433682!3d10.787707761936334!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1zMTU2IE5ndXnhu4VuIFbEg24gVGjhu6cgLSBQLiDEkGEgS2FvIC0gUS4xIC0gVHAuSENN!5e0!3m2!1sen!2s!4v1539682882510" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.7830862917817!2d106.67903385089134!3d10.827905192248743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317529a051ecf4db%3A0x5a97da772085c509!2zVHJ1bmcgdMOibSDEkcOgbyB04bqhbyB0aGnhur90IGvhur8gY2h1ecOqbiBuZ2hp4buHcCB2w6AgbOG6rXAgdHLDrG5oIHZpw6puIGNodXnDqm4gbmdoaeG7h3AgRnVsbFN0YWNrIFZpZXRuYW0!5e0!3m2!1sen!2s!4v1543654687219" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
