--- a/layout-javascript/index.html
+++ b/layout-javascript/index.html
@@ -163,7 +163,7 @@
 				<div class="row">
 					<div class="col-md-6 col-md-pull-1 animate-box" data-animate-effect="fadeInLeft">
 						<div class="img-shadow">
-							<img src="images/img_1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+							<img src="images/img_1.jpg" class="img-responsive" alt="NETA VietNam">
 						</div>
 					</div>
 					<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
@@ -194,7 +194,7 @@
 					<div class="col-md-6">
 						<div class="gtco-practice-area-item animate-box">
 							<div class="gtco-icon">
-								<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+								<i class="ti-ruler-pencil"></i>
 							</div>
 							<div class="gtco-copy">
 								<h3>Thế mạnh</h3>
@@ -210,7 +210,7 @@
 
 						<div class="gtco-practice-area-item animate-box">
 							<div class="gtco-icon">
-								<img src="images/scale.png" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+								<i class="ti-direction-alt"></i>
 							</div>
 							<div class="gtco-copy">
 								<h3>Dễ dàng</h3>
@@ -238,7 +238,7 @@
 				<div class="row team-item gtco-team-reverse">
 					<div class="col-md-6 col-md-push-7 animate-box" data-animate-effect="fadeInRight">
 						<div class="img-shadow">
-							<img src="images/img_team_1.jpg" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co">
+							<img src="images/img_team_1.jpg" class="img-responsive" alt="NETA VietNam">
 						</div>
 					</div>
 					<div class="col-md-6  col-md-pull-6 animate-box" data-animate-effect="fadeInRight">
