--- a/3d-chuyen-nghiep/index.html
+++ b/3d-chuyen-nghiep/index.html
@@ -10,11 +10,11 @@
 	<meta name="twitter:creator" content="@3D Art">
 	<meta name="twitter:title" content="Khoá học thiết kế nhân vật và diễn xuất phim hoạt hình 3D">
 	<meta name="twitter:description" content="3D Art sẽ đem lại cho bạn có được những kỹ thuật thiết kế và kỹ thuật code cao nhất trong nghề, để không chỉ có thể thiết kế mọi thứ về đồ họa cực đẹp mà còn có thể xuất bản ra các trang web với đầy đủ hiệu ứng lẫn tương thích mọi thiết bị một cách chuyên nghiệp nhất.">
-	<meta name="twitter:image:src" content="https://fullstackvietnam.com/khoa-3d/img/item_3.jpg">
+	<meta name="twitter:image:src" content="https://fullstackvietnam.com/3d-chuyen-nghiep/img/item_3.jpg">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://fullstackvietnam.com/index.html">
 	<meta property="og:title" content="Khoá học thiết kế nhân vật và diễn xuất phim hoạt hình 3D">
-	<meta property="og:image" content="https://fullstackvietnam.com/khoa-3d/img/item_3.jpg">
+	<meta property="og:image" content="https://fullstackvietnam.com/3d-chuyen-nghiep/img/item_3.jpg">
 	<meta property="og:description" content="3D Art sẽ đem lại cho bạn có được những kỹ thuật thiết kế và kỹ thuật code cao nhất trong nghề, để không chỉ có thể thiết kế mọi thứ về đồ họa cực đẹp mà còn có thể xuất bản ra các trang web với đầy đủ hiệu ứng lẫn tương thích mọi thiết bị một cách chuyên nghiệp nhất.">
 	<meta property="og:site_name" content="Khoá học thiết kế nhân vật và diễn xuất phim hoạt hình 3D">
 	<meta property="article:author" content="https://www.facebook.com/pham.nguyen.bao.nguyen">
@@ -23,7 +23,7 @@
 	<meta property="ia:markup_url" content="https://fullstackvietnam.com">
 	<meta itemprop="name" content="Khoá học thiết kế nhân vật và diễn xuất phim hoạt hình 3D">
 	<meta itemprop="description" content="3D Art sẽ đem lại cho bạn có được những kỹ thuật thiết kế và kỹ thuật code cao nhất trong nghề, để không chỉ có thể thiết kế mọi thứ về đồ họa cực đẹp mà còn có thể xuất bản ra các trang web với đầy đủ hiệu ứng lẫn tương thích mọi thiết bị một cách chuyên nghiệp nhất.">
-	<meta itemprop="image" content="https://fullstackvietnam.com/khoa-3d/img/item_3.jpg">
+	<meta itemprop="image" content="https://fullstackvietnam.com/3d-chuyen-nghiep/img/item_3.jpg">
 	<link rel="apple-touch-icon" sizes="57x57" href="/favicon/apple-icon-57x57.png">
 	<link rel="apple-touch-icon" sizes="60x60" href="/favicon/apple-icon-60x60.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="/favicon/apple-icon-72x72.png">
